--- a/Contact us.html
+++ b/Contact us.html
@@ -1,7 +1,7 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
-      <title></title>
+      <title>Assigment</title>
       <link rel="stylesheet" href="../Style/CSS.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
