--- a/Home.html
+++ b/Home.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <title>Assigment</title>
-      <link rel="stylesheet" href="../Style/CSS.css">
+      <link rel="stylesheet" href="./style.css"
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <script>
        
